Bug 488084, set mCurPos when slider frame is initialized, so that it is set properly, r+sr=neil